--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-Flask==2.3.3
-Flask-CORS==4.0.0
-Flask-JWT-Extended==4.5.3
+Flask==3.0.3
+Flask-Cors==4.0.0
+Flask-JWT-Extended==4.6.0
 PyMySQL==1.1.0
-bcrypt==4.0.1
-reportlab==4.0.4
-pandas==2.1.1
-python-dotenv==1.0.0
-Werkzeug==2.3.7
+Flask-Bcrypt==1.0.1
+reportlab==4.2.0
+pandas==2.2.3
+python-dotenv==1.0.1
+Werkzeug==3.0.4
+gunicorn==23.0.0
