--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 Flask==3.0.3
 Flask-Cors==4.0.0
 Flask-JWT-Extended==4.6.0
-Flask-Bcrypt==1.0.1
-Flask-SQLAlchemy==3.1.1
-PyMySQL==1.1.0
-reportlab==4.2.0
-python-dotenv==1.0.1
-Werkzeug==3.0.4
+Flask-MySQLdb==2.0.0
 gunicorn==23.0.0
+Werkzeug==3.0.4
+PyMySQL==1.1.0
+cryptography==43.0.1
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
